--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -1070,6 +1070,8 @@
 "market.detail.page.kline.type.min1.title" = "1m";
 "market.detail.page.kline.type.min30.title" = "30m";
 "market.detail.page.kline.type.hour1.title" = "1H";
+"market.detail.page.kline.type.hour2.title" = "2H";
+"market.detail.page.kline.type.hour4.title" = "4H";
 "market.detail.page.kline.type.hour6.title" = "6H";
 "market.detail.page.kline.type.hour12.title" = "12H";
 "market.detail.page.kline.type.day1.title" = "1D";
