--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1167,6 +1167,7 @@
 // Spot
 "spot.page.buy.mining.tip" = "买入价大于 %@ 时满足挂单挖矿条件";
 "spot.page.sell.mining.tip" = "卖出价小于 %@ 时满足挂单挖矿条件";
+"spot.page.button.closed.title" = "交易暂停";
 "spot.page.button.buy.title" = "买入";
 "spot.page.button.sell.title" = "卖出";
 "spot.page.button.limit.buy.title" = "限价委托";
