--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -361,7 +361,7 @@
 "aboutUs.page.cell.shareUs" = "分享 Vite APP";
 "aboutUs.page.cell.official.website" = "Vite 官网";
 "aboutUs.page.cell.portal.website" = "Vite 门户网站";
-"aboutUs.page.cell.blog.website" = "Vite.blog";
+"aboutUs.page.cell.blog.website" = "Vite.wiki";
 "aboutUs.page.email.title" = "意见反馈";
 "aboutUs.page.email.content" = "\n\n\n\n\n意见来自以下使用环境：\n1.设备系统：%@\n2.系统版本:%@\n3.APP 版本：%@\n4.语言环境：%@";
 
